package edu.fiuba.algo3.tp2N10.Modelo.Respuesta;

import java.util.List;

public interface Respuesta {

    Integer evaluar(Respuesta respuestaUsuario);

}
