package edu.fiuba.algo3.tp2N10;

import java.util.List;

public interface Puntaje {

    Integer puntuar(List<Integer> evaluacion);
}
